syntax="proto2";

package pgLogin;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

message LoginRequest
{
    required int32 app_id = 1[(gogoproto.nullable) = false];
    required string apk_ver = 2[(gogoproto.nullable) = false];
    required int32 hall_ver = 3[(gogoproto.nullable) = false];
    required int32 login_type = 4[(gogoproto.nullable) = false];
    required string guid = 5[(gogoproto.nullable) = false];
    optional int32 code = 6[(gogoproto.nullable) = false];
}

message LoginRespData
{
    required int64 mid = 1[(gogoproto.nullable) = false];
    required string nick = 2[(gogoproto.nullable) = false];
    required int32 sex = 3[(gogoproto.nullable) = false];
    required string icon = 4[(gogoproto.nullable) = false];
    required string ssid = 5[(gogoproto.nullable) = false];
    required int64 money = 6[(gogoproto.nullable) = false];
    required int32 login_type = 7[(gogoproto.nullable) = false];
}

message LoginResponse
{
    required int32 status = 1[(gogoproto.nullable) = false];
    required string msg = 2[(gogoproto.nullable) = false];
    required LoginRespData data = 3[(gogoproto.nullable) = false];
}